packages/svelte/tests/validator/samples/const-tag-inside-key-block/input.svelte
{#key 'key'}
	{@const foo = 'bar'}
{/key}
