packages/svelte/tests/compiler-errors/samples/const-tag-whitespace/main.svelte
{#if true}
	{@constfoo = 'bar'}
{/if}
